Extenal ID SF 32

--- a/ScrumFactory.Risks/ScrumFactory.Risks.csproj
+++ b/ScrumFactory.Risks/ScrumFactory.Risks.csproj
@@ -98,6 +98,10 @@
       <Project>{8C02F064-7935-460A-89AA-A77B8511874C}</Project>
       <Name>ScrumFactory.Services</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ScrumFactory.Windows.Helpers\ScrumFactory.Windows.Helpers.csproj">
+      <Project>{372804ef-bb1e-4b18-accb-4776ea590258}</Project>
+      <Name>ScrumFactory.Windows.Helpers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ScrumFactory\ScrumFactory.csproj">
       <Project>{B73E8E5E-4C76-4663-8E6F-51E069ECBDE1}</Project>
       <Name>ScrumFactory</Name>
