#tamanho dos itens default #member performance

--- a/ScrumFactory.Services.Web/web.config
+++ b/ScrumFactory.Services.Web/web.config
@@ -30,7 +30,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>    
-    <add name="ScrumFactoryEntitiesConnectionString" connectionString="metadata=res://*/ScrumFactory.csdl|res://*/ScrumFactory.ssdl|res://*/ScrumFactory.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost;Initial Catalog=ScrumFactory;User ID=sf_db_user;Password=sf;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>    
+    <!--<add name="ScrumFactoryEntitiesConnectionString" connectionString="metadata=res://*/ScrumFactory.csdl|res://*/ScrumFactory.ssdl|res://*/ScrumFactory.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost;Initial Catalog=ScrumFactory;User ID=sf_db_user;Password=sf;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>-->
+    <add name="ScrumFactoryEntitiesConnectionString" connectionString="metadata=res://*/ScrumFactory.csdl|res://*/ScrumFactory.ssdl|res://*/ScrumFactory.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=fs-003\Interno;Initial Catalog=Foster_ScrumFactory;User ID=factoryuser;Password=nErav2Ga&quot;"  providerName="System.Data.EntityClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
