#ajustes delete item

--- a/ScrumFactory.Windows/App.config
+++ b/ScrumFactory.Windows/App.config
@@ -1,47 +1,40 @@
 <?xml version="1.0"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="ScrumFactory.Windows.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-        </sectionGroup>
-    </configSections>
-    <appSettings> 
-        <add key="ProjectsServiceUrl" value="$ScrumFactoryServer$/ProjectsService/"/>
-        <add key="BacklogServiceUrl" value="$ScrumFactoryServer$/BacklogService/"/>
-        <add key="TeamServiceUrl" value="$ScrumFactoryServer$/TeamService/"/>
-        <add key="TasksServiceUrl" value="$ScrumFactoryServer$/TasksService/"/>
-        <add key="ProposalsServiceUrl" value="$ScrumFactoryServer$/ProposalsService/"/>
-        <add key="ArtifactsServiceUrl" value="$ScrumFactoryServer$/ArtifactsService/"/>
-        <add key="AuthorizationServiceUrl" value="$ScrumFactoryServer$/AuthorizationService/"/>
-        <add key="WindowsAuthorizationServiceUrl" value="$ScrumFactoryServer$/WindowsAuthorizationService/"/>
-        <add key="CalendarServiceUrl" value="$ScrumFactoryServer$/CalendarService/"/>
-        <add key="ProjectConstraintsServiceUrl" value="$ScrumFactoryServer$/ProjectConstraintsService/"/>
-        <add key="FactoryServerServiceUrl" value="$ScrumFactoryServer$/FactoryServerService/"/>
-      
-    </appSettings>
-
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="ScrumFactory.Windows.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <appSettings>
+    <add key="ProjectsServiceUrl" value="$ScrumFactoryServer$/ProjectsService/" />
+    <add key="BacklogServiceUrl" value="$ScrumFactoryServer$/BacklogService/" />
+    <add key="TeamServiceUrl" value="$ScrumFactoryServer$/TeamService/" />
+    <add key="TasksServiceUrl" value="$ScrumFactoryServer$/TasksService/" />
+    <add key="ProposalsServiceUrl" value="$ScrumFactoryServer$/ProposalsService/" />
+    <add key="ArtifactsServiceUrl" value="$ScrumFactoryServer$/ArtifactsService/" />
+    <add key="AuthorizationServiceUrl" value="$ScrumFactoryServer$/AuthorizationService/" />
+    <add key="WindowsAuthorizationServiceUrl" value="$ScrumFactoryServer$/WindowsAuthorizationService/" />
+    <add key="CalendarServiceUrl" value="$ScrumFactoryServer$/CalendarService/" />
+    <add key="ProjectConstraintsServiceUrl" value="$ScrumFactoryServer$/ProjectConstraintsService/" />
+    <add key="FactoryServerServiceUrl" value="$ScrumFactoryServer$/FactoryServerService/" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
   <system.net>
-
     <defaultProxy useDefaultCredentials="true">
-      <proxy bypassonlocal="True"/>
+      <proxy bypassonlocal="True" />
       <!-- FIDDLER -->
       <!--<proxy  proxyaddress="http://localhost:8888"/>-->
     </defaultProxy>
-
     <connectionManagement>
-      <add address="*" maxconnection="100"/>
+      <add address="*" maxconnection="100" />
     </connectionManagement>
-
     <settings>
-      <servicePointManager expect100Continue="false"/>
+      <servicePointManager expect100Continue="false" />
     </settings>
-
   </system.net>
-
-
   <!-- FOR SHARPSVN: useLegacyV2RuntimeActivationPolicy="true" -->
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
   <runtime>
     <!-- FOR SHARPSVN -->
@@ -53,7 +46,7 @@
         <value>False</value>
       </setting>
       <setting name="Language" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="ShowOnStart" serializeAs="String">
         <value>True</value>
@@ -62,11 +55,23 @@
         <value>0</value>
       </setting>
       <setting name="RepositoryLogExternalCommand" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="SpellCheckLanguage" serializeAs="String">
-        <value/>
+        <value />
       </setting>
     </ScrumFactory.Windows.Properties.Settings>
   </userSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
