templates de email

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,40 @@
 /ScrumFactory.ReportHelper/bin/Debug
 /ScrumFactory.ReportHelper/obj/Debug
 /ScrumFactory.Data.Sql/obj/Debug
+/ClientDeploy/deploy-2019
+/ScrumFactory/bin/Release
+/ScrumFactory/obj/Release
+/ScrumFactory.Artifacts/obj/Release
+/ScrumFactory.Backlog/obj/Release
+/ScrumFactory.Backlog.Test/obj/Release
+/ScrumFactory.Composition/bin/Release
+/ScrumFactory.Composition/obj/Release
+/ScrumFactory.Data/obj/Release
+/ScrumFactory.Data.Sql/obj/Release
+/ScrumFactory.FactoryServerConfiguration/obj/Release
+/ScrumFactory.HelpDeskPlugin/obj/Release
+/ScrumFactory.Login/obj/Release
+/ScrumFactory.ProjectContraints/obj/Release
+/ScrumFactory.Projects/obj/Release
+/ScrumFactory.Proposals/obj/Release
+/ScrumFactory.ReportHelper/bin/Release
+/ScrumFactory.ReportHelper/obj/Release
+/ScrumFactory.Reports/obj/Release
+/ScrumFactory.Risks/obj/Release
+/ScrumFactory.Risks.Test/obj/Release
+/ScrumFactory.Services/bin/Release
+/ScrumFactory.Services/obj/Release
+/ScrumFactory.Services.Clients/obj/Release
+/ScrumFactory.Services.Logic/obj/Release
+/ScrumFactory.Services.Web/obj/Release
+/ScrumFactory.Tasks/obj/Release
+/ScrumFactory.Tasks.Test/obj/Release
+/ScrumFactory.Team/obj/Release
+/ScrumFactory.Team.Test/obj/Release
+/ScrumFactory.Test/obj/Release
+/ScrumFactory.Windows.Helpers/bin/Release
+/System.ComponentModel.Composition.Extensions/bin/Release
+/System.ComponentModel.Composition.Extensions/obj/Release
+/ScrumFactory.Windows.Helpers/obj/Release
+/ScrumFactory.Windows/obj/x86/Release
+/ScrumFactory.Windows/obj
