--- a/ScrumFactory.Data.Sql/App.Config
+++ b/ScrumFactory.Data.Sql/App.Config
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>    
-    <add name="ScrumFactoryEntities" connectionString="metadata=res://*/ScrumFactory.csdl|res://*/ScrumFactory.ssdl|res://*/ScrumFactory.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=ScrumFactory;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+  <connectionStrings>
+    <add name="ScrumFactoryEntities" connectionString="metadata=res://*/ScrumFactory.csdl|res://*/ScrumFactory.ssdl|res://*/ScrumFactory.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=foster-factory.database.windows.net;initial catalog=foster-factory;user id=factory-adm;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
+</configuration>
