ticket email subject

--- a/ScrumFactory.Services.Web/web.config
+++ b/ScrumFactory.Services.Web/web.config
@@ -16,6 +16,7 @@
     <add key="DocRepPath" value="t:\projects\{0}\{1}\"/>
     <add key="ScrumFactorySenderEmail" value="notification@scrum-factory.com"/>
     <add key="ScrumFactorySenderName" value="Scrum Factory Notification"/>
+    <add key="TicketEmailSubject" value="Incident #{0}"/>    
     <add key="SmtpEnableSsl" value="false"/>
     <add key="DefaultCompanyName" value="My Company"/>
     <add key="SFClientServer" value="http://www.scrum-factory.com"/>
