--- a/ScrumFactory.ReportHelper/ScrumFactory.ReportHelper.csproj
+++ b/ScrumFactory.ReportHelper/ScrumFactory.ReportHelper.csproj
@@ -61,6 +61,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MDParser.cs" />
     <Compile Include="Paginator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
