--- a/ScrumFactory.Services.Web/Web.config
+++ b/ScrumFactory.Services.Web/Web.config
@@ -30,7 +30,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>   
-    <add name="ScrumFactoryEntitiesConnectionString" connectionString="metadata=res://*/ScrumFactory.csdl|res://*/ScrumFactory.ssdl|res://*/ScrumFactory.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=<SERVER>;Initial Catalog=<DATABASE>>;User ID=<USER>;Password=<PASS>&quot;"  providerName="System.Data.EntityClient" />
+    <add name="ScrumFactoryEntitiesConnectionString" connectionString="metadata=res://*/ScrumFactory.csdl|res://*/ScrumFactory.ssdl|res://*/ScrumFactory.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=SERVER;Initial Catalog=DATABASE;User ID=USER;Password=PASS&quot;"  providerName="System.Data.EntityClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
