--- a/ScrumFactory.Services.Web/ScrumFactory.Services.Web.csproj
+++ b/ScrumFactory.Services.Web/ScrumFactory.Services.Web.csproj
@@ -172,6 +172,13 @@
     <Compile Include="MemberImage.aspx.designer.cs">
       <DependentUpon>MemberImage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Project.aspx.cs">
+      <DependentUpon>Project.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Project.aspx.designer.cs">
+      <DependentUpon>Project.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setup\default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
@@ -210,9 +217,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\DB_SCRIPT\DB_SCRIPT_defaultItemSizes.sql" />
     <Content Include="App_Data\DB_SCRIPT\DB_SCRIPT.sql" />
     <Content Include="default.aspx" />
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Images\alert.png" />
     <Content Include="Images\chrome_logo.png" />
@@ -241,6 +248,7 @@
     <Content Include="Images\tail.png" />
     <Content Include="Images\whomember.png" />
     <Content Include="MemberImage.aspx" />
+    <Content Include="Project.aspx" />
     <Content Include="ReportTemplates\DeliveryReport\FullDeliveryReport.xslt">
       <SubType>Designer</SubType>
     </Content>
